v1.2.4.1: Code health fixes + bilingual comments + test coverage
## Sable Compat Fixes (Critical)
- SensorBlockEntitySable: add savedLevel recovery to prevent silent death on Sable
- Extract resolveSubLevel() to shared SablePoseHelper (dedup 3x identical code)
- ControlSeatBlockEntitySable: persist initialSubYaw to NBT
- SableReflection: unified reflection helper replacing 3 independent init paths
- SableReflection: auto-disable on dedicated server (compat subclasses active)
- RadarBlockEntity: skip bootstrap/scan when Sable loaded (compat subclass handles)

## Threading Fixes (High)
- Add volatile to rawVelX/Y/Z in ControlSeatBlockEntity + SensorBlockEntity
- Fix SensorBlockEntity Sable classpath (api.sublevel → sublevel)

## Collaboration Fixes
- PortableTerminalScreen TerminalWrapper implements HostWrapper
- GraphEditor.getActiveHost() unwraps terminal wrapper for instanceof checks
- GraphPresencePacket + GraphEditOpSyncPacket use getActiveHost()
- EditSessionRegistry: comprehensive bilingual documentation

## Code Quality
- Add warn-level logging to critical silent exception handlers
- Guard RadarBlockEntity debug logs with isDebugEnabled()
- Guard ControlSeatEntity Sable import with ModList check
- Complete bilingual (Chinese/English) comments on 25 files

## Test Coverage (New: 74 tests)
- GraphEvaluatorTest: 42 tests (arithmetic, comparison, sensor nodes, chains)
- RuntimeStateTest: 16 tests (NBT roundtrip for all state types)
- GraphOpTest: 5 tests (parseCtrlPoints)
- Code health review document

## Maintainability
- SablePacketHelper: use SablePoseHelper reflection-free reachability check
- SablePoseHelper: add resolveSubLevel, findBlockEntity, isWithinReachableRange
- Clean unused reflection imports in SablePacketHelper

Co-Authored-By: Claude <noreply@anthropic.com>